remove comments for properties

--- a/solr_monitor.properties
+++ b/solr_monitor.properties
@@ -1,18 +1,19 @@
 #solr monitor settings
 solr.ssl.enabled=false
-solr.admin.user=admin
-solr.admin.pwd=ixion1964
+solr.admin.user=SOLR ADMIN USER
+solr.admin.pwd=SOLR ADMIN PWD
 solr.zookeeper.port=localhost:9983
-solr.default.collection=__test__
-solr.collections.to.monitor=
+solr.default.collection=NAME OF YOUR DEFAULT COLLECTION
+solr.collections.to.monitor=C0MMAN,SEPARATED,LIST,OF,COLLECTIONS
 
-mail.host=localhost
-mail.user=admin
-mail.pwd=$$ixion64
-mail.from.email=kmcowan@randomcoolvideo.com
-mail.to.email=kmcowan@cprassoc.com
+mail.host=YOUR MAIL HOST
+mail.user=YOUR MAIL USER
+mail.pwd=YOUR MAIL PWD
+mail.from.email=FROM EMIAL ADDRESS
+mail.to.email=TO EMAIL ADDRESS
 mail.use.auth=false
 
+#MAX RESPONSE TIME. 
 ping.max.response.time=10000
 
 
