--- a/solr_monitor.properties
+++ b/solr_monitor.properties
@@ -3,6 +3,7 @@ solr.ssl.enabled=false
 solr.admin.user=SOLR ADMIN USER
 solr.admin.pwd=SOLR ADMIN PWD
 solr.zookeeper.port=localhost:9983
+solr.host.port=localhost:8983
 solr.default.collection=NAME OF YOUR DEFAULT COLLECTION
 solr.collections.to.monitor=C0MMAN,SEPARATED,LIST,OF,COLLECTIONS
 
