add support for multiple solr instances

--- a/solr_monitor.properties
+++ b/solr_monitor.properties
@@ -5,7 +5,7 @@ solr.admin.pwd=SOLR ADMIN PWD
 solr.zookeeper.port=localhost:9983
 solr.host.port=localhost:8983
 solr.default.collection=NAME OF YOUR DEFAULT COLLECTION
-solr.collections.to.monitor=C0MMAN,SEPARATED,LIST,OF,COLLECTIONS
+solr.hosts.to.monitor=localhost8983
 
 mail.host=YOUR MAIL HOST
 mail.user=YOUR MAIL USER
