--- a/release/solr_monitor.properties
+++ b/release/solr_monitor.properties
@@ -5,7 +5,9 @@ solr.admin.pwd=SOLR ADMIN PWD
 solr.zookeeper.port=localhost:9983
 solr.host.port=localhost:8983
 solr.default.collection=NAME OF YOUR DEFAULT COLLECTION
-solr.collections.to.monitor=C0MMAN,SEPARATED,LIST,OF,COLLECTIONS
+
+#single entry, or comma delimited list of solr hosts to monitor. 
+solr.hosts.to.monitor=localhost8983
 
 mail.host=YOUR MAIL HOST
 mail.user=YOUR MAIL USER
