--- a/solr_monitor.properties
+++ b/solr_monitor.properties
@@ -1,12 +1,22 @@
-#solr monitor settings
+#solr | LW Fusion | Generic API monitor settings
 solr.ssl.enabled=false
 solr.admin.user=SOLR ADMIN USER
 solr.admin.pwd=SOLR ADMIN PWD
 solr.zookeeper.port=localhost:9983
 solr.host.port=localhost:8983
-solr.default.collection=NAME OF YOUR DEFAULT COLLECTION
-solr.hosts.to.monitor=localhost8983
+#NAME OF YOUR DEFAULT COLLECTION
+solr.default.collection=test_collection
+solr.hosts.to.monitor=localhost:8983
 
+#api monitoring information
+# set to true to enable. 
+api.monitor.enabled=false 
+api.url.to.monitor=http://localhost:8764/api/apollo/system/status
+api.basic.auth.login.url=http://localhost:8764/api/session?realmName=native
+api.basic.auth.user=YOUR FUSION SERVICE USER
+api.basic.auth.pwd=YOUR FUSION SERVICE PASSWORD
+
+#email notification 
 mail.host=YOUR MAIL HOST
 mail.user=YOUR MAIL USER
 mail.pwd=YOUR MAIL PWD
@@ -17,9 +27,36 @@ mail.use.auth=false
 #MAX RESPONSE TIME. 
 ping.max.response.time=10000
 
+#time between monitoring checks (thread sleep)
 monitor.loop.time=10000
 
 solr.test.query=*.*
+
+# daily | weekly | monthly | yearly
+stats.rollup.period=monthly
+# a number relative to the period E.g 3 + monthly = rollup for every quarter. 
+stats.rollup.period.quantity=3
+
+# Monitor only during set hours.  Set to -1 to Monitor all. 
+# Otherwise, both start and end will be a number between 1 and 24
+stats.availability.start=9
+stats.availability.stop=17
+
+
+# stats output file 
+stats.file=stats.json
+# How often the stats are written out to file.  
+# E.g. every 1000 entries, write to file.  
+# you can vary this using the solr.monitor.loop property. 
+stats.file.save.every=10
+
+# stats playback log file
+stats.playback.log.file=stats_history_json.log
+
+# Log playback enabled.  Defaults to false. 
+# * WARNING *  ENABLING THIS FIELD WILL PRODUCE A VERY LARGE LOG FILE. 
+stats.playback.enabled=false;
+
 
 
 
