- Bulding out the web interface.
- Release version 1.1.3

--- a/release/solr_monitor.properties
+++ b/release/solr_monitor.properties
@@ -1,4 +1,6 @@
 #solr | LW Fusion | Generic API monitor settings
+
+#Solr Settings
 solr.ssl.enabled=false
 solr.admin.user=SOLR ADMIN USER
 solr.admin.pwd=SOLR ADMIN PWD
@@ -8,18 +10,23 @@ solr.host.port=localhost:8983
 solr.default.collection=test_collection
 solr.hosts.to.monitor=localhost:8983
 
+fusion.query.endpoint=http://localhost:8764/api/apollo/solr/
+
 #api monitoring information
 # set to true to enable. 
 api.monitor.enabled=false 
-# endpoint can be fusion | generic 
+# endpoint can be fusion | solr
+#Note:  With fusion endpoint enabled the cloud solr client monitor will be disabled.  
 api.endpoint.type=fusion
 api.url.to.monitor=http://localhost:8764/api/apollo/system/status
 api.basic.auth.login.url=http://localhost:8764/api/session?realmName=native
-api.basic.auth.user= SERVICE USER
+api.basic.auth.user=SERVICE USER
 api.basic.auth.pwd=SERVICE PWD
 api.secret.key=
 api.auth.key=
 api.ssl.private.key=
+api.host=localhost
+api.port=8764
 
 #email notification 
 mail.host=YOUR MAIL HOST
@@ -35,11 +42,11 @@ ping.max.response.time=10000
 #time between monitoring checks (thread sleep)
 monitor.loop.time=10000
 
-solr.test.query=*.*
+solr.test.query=*:*
 
 # daily | weekly | monthly | yearly   System will default to monthly
 stats.rollup.period=monthly
-# a number relative to the period E.g 3 + monthly = rollup for every quarter. 
+# an integer relative to the period E.g 3 + monthly = rollup for every quarter. 
 stats.rollup.period.quantity=3
 
 # Monitor only during set hours.  Set to -1 to Monitor all. 
@@ -60,7 +67,9 @@ stats.file.save.every=10
 stats.playback.log.file=stats_history_json.log
 
 # Log playback enabled.  Defaults to false. 
-# * WARNING *  ENABLING THIS FIELD WILL PRODUCE A VERY LARGE LOG FILE. 
+# * WARNING *  ENABLING THIS FIELD WILL PRODUCE A VERY LARGE LOG FILE,
+# AND WILL ALSO POTENTIALLY INCREASE THE JVM RUNTIME MEMORY CONSUMPTION. 
+# Only if you have > 1TB storage and a reason for playback should this be enabled. 
 stats.playback.enabled=false;
 
 
